2005-03-23  Werner Koch  <wk@g10code.com>

	* rndw32.c (_gcry_rndw32_gather_random_fast): While adding data
	use the size of the object and not the one of its address.  Bug
	reported by Sascha Kiefer.

2005-03-19  Moritz Schulte  <moritz@g10code.com>

	* cipher.c (do_cbc_encrypt): Be careful to not overwrite data,
	which is to be used later on.  This happend, in case CTS is
	enabled and OUTBUF is equal to INBUF.

2005-03-19  Moritz Schulte  <moritz@g10code.com>

	* ac.c (gcry_ac_data_copy_internal): Use gcry_strdup instead of
	strdup.
	(gcry_ac_data_set): Likewise.
	(gcry_ac_data_get_index): Likewise.

2005-02-25  Werner Koch  <wk@g10code.com>

	* pubkey.c (gcry_pk_get_keygrip): Allow for shadowed-private-key.

2005-01-05  Werner Koch  <wk@g10code.com>

	* serpent.c: s/u32_t/u32/ and s/byte_t/byte/.  Too match what we
	have always used and are using in all other files too.

2004-12-09  Werner Koch  <wk@g10code.com>

	* serpent.c (serpent_test): Moved prototype out of a fucntion.

2004-09-17  Moritz Schulte  <moritz@g10code.com>

	* serpent.c: Use "u32_t" instead of "unsigned long", do not
	declare S-Box variables as "register".  Fixes failure on
	OpenBSD/sparc64, reported by Nikolay Sturm.

2004-09-16  Moritz Schulte  <moritz@g10code.com>

	* pubkey.c (pubkey_table): Added an alias entry for GCRY_PK_ELG_E;
	merged from HEAD.
	
2004-09-15  Werner Koch  <wk@g10code.de>

	* random.c (read_pool): Fixed dropping of the volatile warning when
	passing MY_PID to add_random.

	* pubkey.c (sexp_data_to_mpi): Fixed syntax error. Aiih committing
	changes without compiling is a real brown paper bag bug.

2004-08-19  Werner Koch  <wk@g10code.de>

	* pubkey.c (sexp_data_to_mpi): Changed the zero random byte
	substituting code to actually do clever things.  Thanks to
	Matthias Urlichs for noting the implementation problem.

2004-08-09  Moritz Schulte  <moritz@g10code.com>

	* pubkey.c (gcry_pk_sign): Fixed memory leak; fix provided by
	Modestas Vainius.
